Fixing text overflow in game title

--- a/src/app/pages/search-page/components/game-list-item/game-list-item.component.scss
+++ b/src/app/pages/search-page/components/game-list-item/game-list-item.component.scss
@@ -1,5 +1,6 @@
 .card {
     display: grid;
+    position: relative;
     grid-template-columns: 300px;
     grid-template-rows: auto 100px 50px;
     grid-template-areas: "image" "text" "stats";
@@ -64,4 +65,9 @@
 
 a{
     text-decoration: none;
+}
+
+.title{
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
